summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^